--- a/Odin/Views/Orders/Index.cshtml
+++ b/Odin/Views/Orders/Index.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_Common.cshtml";
 }
 
-<div id="list">
+<div class="container-fluid" id="list">
     <div id="search">
             <input id="searchbox"/><button>Search</button>
         </div>
