--- a/Odin/Content/Site.css
+++ b/Odin/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
-    padding-top: 90px;
-    padding-bottom: 20px;
+    /*padding-top: 90px;
+    padding-bottom: 20px;*/
+    padding: 0 0 0 0;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -29,12 +30,12 @@ textarea {
 }
 
 
-.navbar-default .notifications .badge {
-    position: absolute;
-    top: 8px;
-    right: -1px;
-    background: #a80a0a;
-}
+    .navbar-default .notifications .badge {
+        position: absolute;
+        top: 8px;
+        right: -1px;
+        background: #a80a0a;
+    }
 
 .voffset {
     margin-top: 2px;
@@ -62,7 +63,7 @@ textarea {
 
 /* Page-level styles */
 
-.page-content{
+.page-content {
     padding-top: 12rem;
 }
 
@@ -70,7 +71,7 @@ textarea {
     position: absolute;
     top: 0;
     left: 0;
-    padding-top: 15rem; 
+    padding-top: 15rem;
 }
 
 .transferee-list > div .transferee {
@@ -87,7 +88,6 @@ textarea {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -114,3 +114,4 @@ textarea {
 .grey-header {
     color: darkgrey;
 }
+
