--- a/Odin/Content/css/orders.scss
+++ b/Odin/Content/css/orders.scss
@@ -1,4 +1,4 @@
-﻿@import "shared/definitions";
+﻿@import "./shared/_definitions.scss";
 
 $top_border_color: #979797;
 $primary_link_color: #6C6E70;
@@ -12,14 +12,14 @@ body {
     }
 }
 
-@include header;
+//@include header;
 
 div#list {
     height: auto;
     padding-bottom: 45px;
     //border-top: 1px solid $top_border_color;
-
     div#search {
+        margin-top: $primaryNavHeightSm;
         height: 72px;
         padding-top: 21px;
         padding-left: 43px;
@@ -39,6 +39,10 @@ div#list {
             font-size: 15px;
             margin-left: 15px;
             background-color: $DW_Blue;
+        }
+
+        @media screen and (min-width: 40rem) {
+            margin-top: $primaryNavHeightLg;
         }
     }
 
