--- a/Odin/Views/Orders/Partials/_Details.cshtml
+++ b/Odin/Views/Orders/Partials/_Details.cshtml
@@ -28,7 +28,7 @@
 
             <div class="col-sm-3 details-col">
                 <label>Final Arrival:</label>
-                <span>@(Model.FinalArrivalDate.HasValue ? Model.FinalArrivalDate.Value.ToString("MM/dd/yy") : "TBD")</span>
+                <span>@(Model.EstimatedArrivalDate.HasValue ? Model.EstimatedArrivalDate.Value.ToString("MM/dd/yy") : "TBD")</span>
             </div>
             <div class="col-sm-3 details-col">
                 <label>Home Finding Date:</label>
