--- a/Odin/Views/Shared/_Common.cshtml
+++ b/Odin/Views/Shared/_Common.cshtml
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/cssBundle")
+    @RenderSection("styles", required: false)
+    
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/lib")
+    @Scripts.Render("~/bundles/app")
+    @RenderSection("scripts", required: false)
  </head>
 <body>
 
@@ -13,11 +18,7 @@
 
     <div class="page-content">
         @RenderBody()
-    </div>    
-
-
-    @Scripts.Render("~/bundles/lib")
-    @Scripts.Render("~/bundles/app")
-    @RenderSection("scripts", required: false)
+    </div> 
+   
 </body>
 </html>
